# claude-commands

./: .agent_prompt_pr-2162-gemini-3-upgrade..txt  .coderabbit.yaml  .cursorignore  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .firebaserc  .gitattributes  .gitignore  .gitleaks-baseline.json  .gitmodules  .infrastructure.conf.example  .mcp.json  .pr-metadata.json  .pre-commit-config.yaml  0_test.txt  AGENTS.md  AO-TASK-BRIEF.md  Animal_Game_Design_Document.md  Animal_Game_Product_Specification.md  CLAUDE.md  CLAUDE.md.backup.20250713_094157  CLAUDE_CODE_FIX_SUMMARY.md  CLAUDE_MD_MEMORY_ENHANCEMENT.md  CLAUDE_SLASH_COMMANDS_SUMMARY.md  CLAUDE_TEST.md  CLAUDE_compressed.md  CLAUDE_optimized.md  COMPRESSION_PROOF.md  CONTEXT_AWARENESS.md  CREATE_PR_MEMORY_MVP.md  CUSTOM_METRICS_DASHBOARD_SETUP.md  DEPRECATED_SERVERS.md  Dockerfile  GEMINI.md  GENESIS.md  GITHUB_CLAUDE_SLASH_COMMANDS.md  GITHUB_SECRET_SETUP.md  GRAFANA_CLOUD_SETUP.md  (+231 more)
.claude/skills/browserclaw/: .gitignore  .gitleaksignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.claude/skills/browserclaw/docs/: roadmap-2026-04-15.md
.claude/skills/browserclaw/marketplace/: claude-marketplace-skill.md
.claude/skills/browserclaw/scripts/: install_openclaw_plugin.sh
.claude/skills/browserclaw/specs/: skeptic-report.json
.claude/skills/browserclaw/tests/: test_capture.py  test_cli.py  test_generator.py  (+2 more)
mcp_servers/slash_commands/: README.md  __main__.py  pyproject.toml  requirements.txt  server.py  unified_router.py
mcp_servers/slash_commands/tests/: test_security.py  test_unified_router.py
(+6172 files in other folders)
