[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-slash-commands-mcp"
version = "1.0.0"
dependencies = [
    "mcp>=0.1.0",
    "fastmcp>=2.11.3",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
]

[project.scripts]
claude-slash-commands-mcp = "server:main"
