[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "browserclaw"
version = "0.1.0"
description = "Capture browser traffic with Playwright and generate Python + MCP clients from HAR files."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Jeffrey Lee Chan"}
]
dependencies = [
  "httpx>=0.27.0",
  "playwright>=1.51.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
browserclaw = "browserclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/browserclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]

